--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello.
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+
+        <title>Mon 1er site iternet</title>
+    </head>
+    <body>
+    Hello.
+Nous allons parler de:
+
+    </body>
+
+</html>
