--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
+
 <html>
+
     <head>
+
+        <!-- En-tête de la page -->
+
         <meta charset="utf-8" />
 
-        <title>Mon 1er site iternet</title>
+        <title>Titre</title>
+
     </head>
+
+
     <body>
-    Hello.
-Nous allons parler de:
+
+        <!-- Corps de la page -->
 
     </body>
 
