--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
 
-        <!-- En-tête de la page -->
+        <!-- Iron man -->
 
         <meta charset="utf-8" />
 
@@ -15,7 +15,7 @@
 
     <body>
 
-        <!-- Corps de la page -->
+        <!-- histoire -->
 
     </body>
 
