--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 
         <meta charset="utf-8" />
 
-        <title>Titre</title>
+        <title>Iron man</title>
 
     </head>
 
 
     <body>
 
-        <!-- histoire -->
+<!-- histoire --> 
 
     </body>
 
